examples/test/testpolicy17826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17826
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key38: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
          key13: value41
          key1: value36
      podSelector:
        matchLabels:
          key42: value3
          key6: value3
          key38: value12
